container overflow height fix in chanSettings

--- a/src/styles/components/SideBar/_ConvList.scss
+++ b/src/styles/components/SideBar/_ConvList.scss
@@ -1,9 +1,10 @@
 .ConvList {
 	width: 100%;
-	height: calc(100% - calc(96em + 32em));
+	height: calc(100% - (96em + 32em));
 	display: flex;
 	flex-direction: column;
 	gap: 32em;
+	// background: orange !important;
 
 	.ConvList-switch {
 		display: flex;
@@ -15,10 +16,11 @@
 		gap: 16em;
 		width: 100%;
 		height: calc(100% - calc(44em + 32em));
+		// background: red;
 
 		.ConvList-content {
 			width: 100%;
-			height: calc(100% - calc(48em + 16em));
+			height: calc(100% - (48em + 16em));
 			display: flex;
 			flex-direction: column;
 			border-radius: 6em;
@@ -39,5 +41,9 @@
 		.ConvList-content--add {
 			gap: 8em;
 		}
+	}
+
+	&.inSettings {
+		height: calc(100% - (96em + 2 * 32em + 48em));
 	}
 }
